# ainex_bringup-1

./: CMakeLists.txt  README.md  package.xml  pyrightconfig.json
docs/: ЗВУК_И_АНИМАЦИЯ_РОТА.md  ИНСТРУКЦИЯ_РОТ_И_ЗВУК.md
launch/: base.launch  bringup.launch  oled_mouth.launch  oled_mouth02.launch
scripts/: README.md  check_audio.sh  check_oled_mouth.sh  oled_display.py  robot_mouth_talk.py  robot_mouth_talk_node.py  sound_and_mouth_talk.py  source_env.bash
